attempt to fix font size on iphone

--- a/themes/aster/assets/scss/_basic.scss
+++ b/themes/aster/assets/scss/_basic.scss
@@ -184,25 +184,25 @@ strong {
 
 @media screen and (max-width: 720px) {
 	h1 {
-		font-size: 30px;
-	}
-	.h2-title-size {
-		font-size: 40px!important;
-	}
-	h2 {
 		font-size: 25px;
 	}
-	h3 {
+	.h2-title-size {
+		font-size: 30px!important;
+	}
+	h2 {
 		font-size: 20px;
 	}
+	h3 {
+		font-size: 15px;
+	}
 	h4 {
-		font-size: 19px;
+		font-size: 14px;
 	}
 	h5 {
-		font-size: 16px;
+		font-size: 11px;
 	}
 	h6 {
-		font-size: 14px;
+		font-size: 9px;
 	}
 }
 
